[project]
authors = [{ name = "CAVE Developers" }]
classifiers = []
dependencies = [
    "attrs>=21.3.0",
    "cachetools>=4.2.1",
    "ipython>6",
    "jsonschema",
    "networkx",
    "oldest-supported-numpy",
    "packaging>=24.1",
    "pandas<3.0.0",
    "pyarrow>=3",
    "requests",
    "urllib3",
]
description = "A client for interacting with the Connectome Annotation Versioning Engine"
license = "MIT"
maintainers = [{ name = "CAVE Developers" }]
name = "caveclient"
readme = "README.md"
requires-python = ">=3.8"
version = "7.3.0"

[project.urls]
Documentation = "https://caveconnectome.github.io/CAVEclient/"
Homepage = "https://caveconnectome.github.io/CAVEclient/"
Issues = "https://github.com/CAVEconnectome/CAVEclient/issues"
Repository = "https://github.com/CAVEconnectome/CAVEclient/"

[project.optional-dependencies]
cv = ["cloud-volume"]

[dependency-groups]
bump = ['bump-my-version']
dev = [
    { include-group = 'bump' },
    { include-group = 'docs' },
    { include-group = 'lint' },
    { include-group = 'test' },
]
docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-include-markdown-plugin",
    "mkdocs-jupyter",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-section-index",
    "mkdocstrings[crystal,python]",
    "mknotebooks",
    "pymdown-extensions",
]
lint = ["ruff"]
test = ["pytest", "pytest-cov", "pytest-env", "pytest-mock", "responses"]

[tool.bumpversion]
allow_dirty = false
commit = true
commit_args = ""
current_version = "7.3.0"
ignore_missing_version = false
message = "Bump version: {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}"]
sign_tags = false
tag = true
tag_message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff.lint]
exclude = ['*.ipynb']

[tool.poe.tasks]
checks = ['doc-build', 'lint', 'test']
doc-build = "mkdocs build"
doc-push = "mkdocs gh-deploy --force --remote-branch gh-pages --remote-name origin"
doc-serve = "mkdocs serve"
dry-bump = "uv run bump-my-version bump --dry-run --verbose"
lint = ['lint-check', 'lint-format']
lint-check = "uv run ruff check . --extend-select I"
lint-format = "uv run ruff format . --check"
test = "uv run pytest tests"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
